<resources>
    <string name="app_name">MiniApp02</string>
    <string name="net_speed">Network Speed (Mbps)</string>
    <string name="net_hint">Enter Network Speed (Mbps)</string>
    <string name="file_size">File Size (MiB)</string>
    <string name="file_hint">Enter File Size (MiB)</string>
    <string name="seconds">seconds</string>
    <string name="transfer_time">Transfer Time</string>
    <string name="calculate">Calculate</string>
    <string name="result">0.0</string>
    <string name="test">100</string>

</resources>
